# Solace-AI

./: .editorconfig  .env.example  .env.template  .gitignore  .pre-commit-config.yaml  =0.26.0  ARCHITECTURE_DIAGRAMS.md  BACKEND_READY.md  COMPREHENSIVE_VERIFICATION_REPORT.md  ENTERPRISE_DEPLOYMENT_GUIDE.md  INTEGRATION_VERIFICATION.md  Makefile  OPTIMIZATION_REPORT.md  PROJECT_MAP.md  README.md  REFACTORING_PROGRESS.md  REFACTORING_SUMMARY.md  REFACTOR_PLAN.md  SUPERVISOR_AGENT_INTEGRATION.md  Solace-AI_wiki.md  Solace_AI_Diagnosis_Module_Design.docx  __init__.py  alembic.ini  api_server.py  app.py  app_streamlit.py  celebrity_voice_clone_demo.py  chat.py  check_env.py  conftest.py  context_manager.py  count_lines.py  docker-compose.yml  import_analysis.txt  improvements.md  launch_ui.py  main.py  main_streamlit.py  output2.txt  project-intent-and-objectives.txt  (+21 more)
.claude/: settings.local.json
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: chat_handler.py  main.py  model.py  styles.css  vector_store.py
app/vector_store/: index.pkl
archive/: main.py
archive/components/: __init__.py  dynamic_personality_assessment.py
archive/database/: __init__.py  vector_db_integration.py  vector_store.py
archive/diagnosis/: __init__.py  comprehensive_diagnosis.py  comprehensive_diagnostic_report.py  differential_diagnosis.py  enhanced_integrated_system.py  enterprise_multimodal_pipeline.py  model_management.py
archive/memory/: __init__.py  context_aware_memory.py
archive/models/: agno_llm_wrapper.py  gemini_api.py  gemini_llm.py  llm.py
archive/optimization/: context_optimizer.py  optimized_orchestrator.py  performance_profiler.py
archive/personality/: big_five.py  chatbot_personality.py  mbti.py
archive/utils/: agentic_rag.py  audio_player.py  celebrity_voice_cloner.py  console_utils.py  device_utils.py  dia_tts.py  import_analyzer.py  logger.py  metrics.py  response_envelope.py  sentiment_utils.py  voice_ai.py  voice_clone_integration.py  (+2 more)
config/: config.py  config.yaml
docs/: ARCHITECTURE.md  AUDIT-REPORT.md  BUG-BACKLOG.md  COMPREHENSIVE_TEST_AND_CONFIG_REVIEW.md  CORE_ARCHITECTURE_AUDIT.md  CROSS_CUTTING_REVIEW.md  FULL_CODEBASE_AUDIT.md  LANGGRAPH_PIPELINE_AUDIT.md  MIGRATION_GUIDE.md  MVP-ISSUES.md  MVP-TODOS.md  PHASE_1_2_CODE_REVIEW.md  PHASE_3_4_CODE_REVIEW.md  PHASE_5_6_CODE_REVIEW.md  PHASE_7_8_CODE_REVIEW.md  PHASE_9_10_CODE_REVIEW.md  REMEDIATION_PLAN.md  REMEDIATION_TRACKING.md  SYSTEM-DESIGN-SUMMARY.md  bugs.txt  central_vector_db.md  central_vector_db_usage.md  conversation_tracking.md  remediation-remaining-items.md  remediation-summary.md  remediation-technical-report.md  test-remediation-plan.md
enterprise/: __init__.py  main.py
examples/: provider_switching_demo.py  therapeutic_friction_example.py
infrastructure/: __init__.py
libs/: __init__.py
migrations/: env.py
scripts/: __init__.py  launch_api.py  setup_dia.py  setup_voice.py
services/: __init__.py
src/: Dockerfile  __init__.py  code_review_report.md  main.py  requirements.txt  requirements_minimal.txt
steps/: 01_DIAGNOSIS_MODULE_ARCHITECTURE.md
system-design/: DIAGNOSIS-SERVICE-COMPETITIVE-ANALYSIS.md  IMPLEMENTATION-PLAN.md  MEMORY-SERVICE-COMPETITIVE-ANALYSIS.md  ORCHESTRATOR-SERVICE-COMPETITIVE-ANALYSIS.md  PERSONALITY-SERVICE-COMPETITIVE-ANALYSIS.md  README.md  SAFETY-SERVICE-COMPETITIVE-ANALYSIS.md  Solace-AI-Final-System-Architecture.md  THERAPY-SERVICE-COMPETITIVE-ANALYSIS.md
tests/: __init__.py  conftest.py  test_fixes.py  test_syntax_and_imports.py
tests_old_backup/: README.md  conftest.py  test_utils.py  test_vector_db.py
tools/: check_env.py  verify_models.py
utils/: model_handler.py  text_processor.py
vector_store/: index.faiss  index.pkl
(+902 files in other folders)
